--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -7,6 +7,8 @@ name: Sample
 on:
   push:
   workflow_dispatch:
+   #schedule:
+    #- cron:  '*/15 * * * *'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
