--- a/.github/workflows/Azure_SQL.yml
+++ b/.github/workflows/Azure_SQL.yml
@@ -13,12 +13,11 @@ build:
     - uses: azure/login@v1
     with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-- uses: azure/sql-action@v1
-  with:
-    server-name: SQL_SERVER_NAME
-    connection-string: ${{ secrets.AZURE_SQL_CONNECTION_STRING }}
-   # sql-file: './Database.dacpac'
+     - uses: azure/sql-action@v1
+      with:
+        server-name: srvr-azurepoc-2.database.windows.net
+        connection-string: ${{ secrets.AZURE_SQL_CONNECTION_STRING }}
+        dacpac-package: './Database.dacpac'
 
     # Azure logout 
 - name: logout
