--- a/.github/workflows/SQLServerStatus.yml
+++ b/.github/workflows/SQLServerStatus.yml
@@ -19,4 +19,4 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Run a one-line script
-      run: Powershell .\SQlServerStatus.ps1
+      run: Powershell .\Azure_SQL.ps1
