--- a/.github/workflows/Azure_SQLConnection.yml
+++ b/.github/workflows/Azure_SQLConnection.yml
@@ -1,4 +1,4 @@
-name: Azure SQL for GitHub Actions
+name: Azure SQL
 
 on:
 push:
@@ -17,7 +17,7 @@ build:
       with:
         server-name: srvr-azurepoc-2.database.windows.net
         connection-string: ${{ secrets.AZURE_SQL_CONNECTION_STRING }}
-        dacpac-package: './Database.dacpac'
+        #dacpac-package: './Database.dacpac'
 
     # Azure logout 
 - name: logout
