--- a/.github/workflows/SQLServerStatus.yml
+++ b/.github/workflows/SQLServerStatus.yml
@@ -14,7 +14,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
 
-    runs-on: windows-latest
+    runs-on: self-hosted
 
     steps:
     - uses: actions/checkout@v1
