--- a/.github/workflows/SQLServerStatus.yml
+++ b/.github/workflows/SQLServerStatus.yml
@@ -8,6 +8,11 @@ on:
   workflow_dispatch:
    #schedule:
     #- cron:  '*/15 * * * *'
+    inputs:
+      Servername:
+        description: 'Provide the name of SQL Instance'     
+        required: true
+        default: ''
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -18,6 +23,7 @@ jobs:
     env:
       SQL_USERNAME: ${{ secrets.SQL_username }}
       SQL_PASSWORD: ${{ secrets.SQL_password }}
+      SERVERNAME: ${{ github.event.inputs.Servername }}
     steps:
     - uses: actions/checkout@v1
     - name: Run a one-line script
