--- a/.github/workflows/Extract_Dacpac.yml
+++ b/.github/workflows/Extract_Dacpac.yml
@@ -2,9 +2,6 @@ name: Extracting dacpac
 
 on:
   workflow_dispatch:
-defaults:
-  run:
-    working-directory: C:\Program Files\Microsoft SQL Server\150\DAC\bin
 jobs:
   build:
     runs-on: self-hosted
@@ -15,5 +12,7 @@ jobs:
     - name: Checkout the source code
       uses: actions/checkout@v2
 
-    - name: Extracting Dacpac 
+    - name: Working Directory 
+      run: cd C:\Program Files\Microsoft SQL Server\150\DAC\bin
+    - name: Extrcting dacpac
       run: sqlpackage /Action:Extract /Tf:${{github.workspace}}\AdventureWorks2016.dacpac /ssn:${{env.DB_SERVER}} /sdn:${{env.database}} 
